<resources>
    <string name="app_name">Memory Game</string>
    <string name="memory_game">MEMORY GAME</string>
    <string name="dificil">Díficil</string>
    <string name="facil">Fácil</string>
    <string name="medio">Medio</string>
    <string name="selecciona_una_dificultad">Selecciona una dificultad</string>
    <string name="todo">todo</string>
    <string name="tiempo">60s</string>
    <string name="counter">0</string>
    <string name="exit">Salir</string>
    <string name="restart">Reiniciar</string>
    <string name="aceptar">Aceptar</string>
    <string name="puntos">Puntos</string>
    <string name="texto_informacion">Texto información</string>
    <string name="game_over">GAME OVER</string>
    <string name="espacio_blanco" />
    <string name="cero">0s</string>
    <string name="selecciona_personajes">Selecciona personajes</string>
    <string name="version">Version: 2.2.1</string>
    <string name="credits">Sounds from Zapsplat.com</string>
    <string name="cargando">Cargando…</string>
    <string name="iniciando">Iniciando...</string>
</resources>