<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_gravity="center">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_dialog"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_game_over"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/data1"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_puntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/puntos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_info"
        app:layout_constraintEnd_toEndOf="@+id/lottie_dialog"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/lottie_dialog"
        app:layout_constraintTop_toBottomOf="@+id/lottie_dialog" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/texto_informacion"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_aceptar"
        app:layout_constraintEnd_toEndOf="@+id/lottie_dialog"
        app:layout_constraintStart_toStartOf="@+id/lottie_dialog"
        tools:ignore="SmallSp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_aceptar"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_background"
        android:fontFamily="sans-serif-black"
        android:paddingStart="15dp"
        android:paddingTop="0dp"
        android:paddingEnd="15dp"
        android:paddingBottom="0dp"
        android:text="@string/aceptar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:backgroundTint="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lottie_dialog"
        app:layout_constraintStart_toStartOf="@+id/lottie_dialog"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>